# siloq-app

./: .env.example  .gitignore  ALEMBIC_SETUP.md  ARCHITECTURE.md  CLI_QUICK_REFERENCE.md  CODE_ORGANIZATION_COMPLETE.md  DIGITALOCEAN_DEPLOYMENT_GUIDE.md  DIGITALOCEAN_MIGRATIONS.md  ENV_FILE_USAGE_REPORT.md  FRESH_DB_SETUP.md  FRESH_MIGRATION_STEPS.md  FRESH_START_FIX.md  LICENSE  PYDANTIC_V2_FIX.md  README.md  REFACTORING_SUMMARY.md  RUN_TESTS.sh  SCANNER_IMPLEMENTATION_SUMMARY.md  SETUP.md  TESTING.md  WORDPRESS_PLUGIN_READY.md  WORDPRESS_TALI_IMPLEMENTATION.md  alembic.ini  app.yaml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run_migration.py  siloq_cli.py
alembic/: env.py
app/: __init__.py  exceptions.py  main.py  types.py
db_migrations/: env.py  script.py.mako
docs/: README.md  dev-handoff-scoring.md  scoring-algorithm-v1.1.md  scoring-bug-fixes.md
migrations/: QUICK_REFERENCE.md  README.md  V001__initial_schema.sql  V002__silo_decay_trigger.sql  V003__constraint_enforcement.sql  V004__decision_engine_states.sql  V005__pgvector_setup.sql  V006__decay_safety_patch.sql  V006__reservation_system.sql  V007__reverse_silo_engine.sql  V008__week5_ai_draft_engine.sql  V009__add_governance_checks_to_pages.sql  V010__week6_lifecycle_gates.sql  V011__site_type_enum.sql  V012__security_entitlements_system.sql  V013__api_keys_table.sql  V014__website_scanner.sql  seed_test_data.sql
scripts/: alembic_autofix.ps1  alembic_autofix.sh  bootstrap-db.sh  check_table.py  fix_alembic_migration.py  generate_token.py  install_jose.sh  (+1 more)
(+211 files in other folders)
